syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme.logistics.warehouse.grpc";
option java_outer_classname = "WarehouseProto";

package warehouse;

service WarehouseService {
  rpc CheckStock(StockRequest) returns (StockResponse);
  rpc ReserveItems(ReserveRequest) returns (ReserveResponse);
  rpc ReleaseItems(ReserveRequest) returns (ReserveResponse);
  rpc GetItemInfo(ItemRequest) returns (ItemInfo);
}

message StockRequest {
  int64 product_id = 1;
  int32 quantity = 2;
}

message StockResponse {
  bool available = 1;
  int32 available_quantity = 2;
  int32 reserved_quantity = 3;
  string message = 4;
}

message ReserveRequest {
  int64 product_id = 1;
  int32 quantity = 2;
}

message ReserveResponse {
  bool success = 1;
  string message = 2;
}

message ItemRequest {
  int64 product_id = 1;
}

message ItemInfo {
  int64 id = 1;
  int64 product_id = 2;
  string product_name = 3;
  string category = 4;
  int32 quantity_available = 5;
  int32 quantity_reserved = 6;
  string location = 7;
  string warehouse_zone = 8;
  double price_per_unit = 9;
}
